// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expensesSummarry with multiple expenses 1`] = `
<div>
  <h1>
    Currently displaying 
    3
     
    expenses
     totalling 
    $2,349.99
    .
  </h1>
</div>
`;

exports[`should correctly render expensesSummarry with one expense 1`] = `
<div>
  <h1>
    Currently displaying 
    1
     
    expense
     totalling 
    $9.99
    .
  </h1>
</div>
`;
